syntax = "proto3";

option java_package = "net.ramify.forum.proto";
option java_outer_classname = "ViewProto";

import "forum.proto";

message ForumView {

    Forum forum = 1;
    repeated BoardView board = 2;

}

message BoardView {

    Board board = 1;
    repeated TopicView topic = 2;

    uint32 numPosts = 10;
    uint32 numTopics = 11;

}

message TopicView {

    Topic topic = 1;

    oneof post {
        PostView posts = 2;
        Post latestPost = 3;
    }

    uint32 numPosts = 10;
    uint32 numViews = 11;

    message PostView {

        repeated Post post = 1;
        uint32 page = 2;

    }

}